
Release 2.6.0

* Added support for scaffolded properties based on the current dialect for tables, views, relations and domains
* Bug Fixing 2949508 [ERDesignerNG] Rev Eng not handling UDTs in PostgreSQL
* Bug Fixing 2952877 [ERDesignerNG] Custom Types
* Bug Fixing 2933615 [ERDesignerNG] UUID Datatype not Supported in PostgreSQL
* Implemented FR 2982848 [ERDesignerNG] Hide password in ConnectionEditor
* Implemented FR 2925550 [ERDesignerNG] Compare with other models

Release 2.7.0

* Implemented FR 2895866 [ERDesignerNG] force connection aliases to be unique
* Implemented FR 2880354 [ERDesignerNG] wrap and indent *.mxm
* Implemented FR 2895112 [ERDesignerNG] do *not* show column-comments by default
* Implemented FR 2895244 [ERDesignerNG] make the context-menus consistent
* SQL Area and View editor are not syntax highlighted
* Implemented FR 2895576 [ERDesignerNG] TableSelectEditor devide tables from views
* Implemented FR 3158981 [ERDesignerNG] Add SQL Browser the the UI
* Bug Fixing 3056071 [ERDesignerNG] postgres unkown datatype prevent reverse eng.

Release 3.0.0

* Added first version of 3D Model Editor
* Added first version of 2D Interactive Model Editor
* Implemented FR 3317539 [ERDesignerNG] TableSelectEditor: (De)select whole subtrees
* Implemented FR 2895576 [ERDesignerNG] TableSelectEditor devide tab
* Implemented FR 2924838 [ERDesignerNG] Using Oracle' tablespace
* Implemented FR 2880756 [ERDesignerNG] Allow copying of entities and views
* Bug Fixing 2899094 [ERDesignerNG] select first *non-system* schema in RevEngEd (re-introduced by buggy commit in v1072)
* Bug Fixing 2975206 [ERDesignerNG] Unknown data type during revers engineering
* Bug Fixing 3306174 [ERDesignerNG] Unknown datatype (2.7.0 release)
* Bug Fixing 3184767 [ERDesignerNG] SQL server 2008 reengineering exception
* Bug Fixing 3161426 [ERDesignerNG] Error saving/loading projet
* Working on support for Spatial Datatypes & Fulltext indexes
* Added support for model validation & quick fixes